2019-12-17 Henri Menke

    - Reseed the RNG before every use

2019-12-16 Benjamin Desef

    - Remove redundant definition of `center` anchor

2019-12-16 Benjamin Desef

    - Rewrite explanation for `\anchorborder`

2019-12-16 Henri Menke

    - Document loading order for translator #804

2019-12-15 Henri Menke

    - Hash doubling in pgfkeys edef only for numbers #305 #669

2019-12-15 Henri Menke

    - Add conditional for externalize to manual

2019-12-14 Henri Menke

    - Check \ifmeasuring@ #759

2019-12-13 Henri Menke

    - Add comment about 8 character filename limit in old ConTeXt #769

2019-12-13 Henri Menke

    - [CI] atbegshi, atveryend, bitset, pdfescape, rerunfilecheck

2019-12-13 Henri Menke

    - Typos in the manual #805 #806

2019-12-04 Henri Menke

    - New build system

2019-12-05 Henri Menke

    - [CI] letltxmacro

2019-12-05 Henri Menke

    - Document that matrix on path need ampersand replacement #801

2019-12-05 Henri Menke

    - More nitpicking #803

2019-12-05 fmitha

    - Minor typo fixes and word change suggestions.

2019-12-03 Henri Menke

    - Missing letter in functional tokens #798

2019-12-02 Henri Menke

    - [CI] stringenc

2019-12-02 Henri Menke

    - Remove cleanuplink and friends #796

2019-12-01 Henri Menke

    - [CI] kvoptions

2019-12-01 Henri Menke

    - Execute size hook unconditionally #795

2019-11-30 Stefan Pinnow

    - issue #775 - corrected some spellings - harmonized e.g. "$x$ direction" --> "$x$-direction" with the rest of the manual - adjusted "mystars" example so it fits to the "blue code box" - renamed `lines` to `mylines` in last `codeexample` to match the previous `mystars` example

2019-11-29 Henri Menke

    - Fix sorting of intersections #480

2019-11-29 Henri Menke

    - Update TeX Live CI

2019-11-29 Henri Menke

    - Document shorten < and > #387

2019-11-29 Henri Menke

    - pgfinterruptpath is not a scope #442

2019-11-28 Henri Menke
