@@ -1,3 +1,7 @@
+2019-12-19 Henri Menke
+
+    - [CI] bigintcalc, etexcmds, gettitlestring, hycolor, intcalc, kvdefinekeys, kvsetkeys, ltxcmds, refcount, uniquecounter
+
 2019-12-17 Henri Menke
 
     - Reseed the RNG before every use
